--- a/simbatolls/templates/home.html
+++ b/simbatolls/templates/home.html
@@ -96,7 +96,7 @@
 
 <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
     <a class="navbar-brand" href="/">
-        <img src="{{ url_for('static', filename='assets/logo/simba.jpeg') }}" alt="Simba Toll-a-Tor">
+        <img src="{{ url_for('static', filename='assets/logo/simba.png') }}" alt="Simba Toll-a-Tor">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -116,7 +116,7 @@
 
 <div class="container-custom">
     <div class="text-center">
-        <img src="{{ url_for('static', filename='assets/images/brand/simba.png') }}" alt="Simba Logo" class="img-fluid mb-3" style="margin-top: 120px;" >
+        <img src="{{ url_for('static', filename='assets/images/brand/simba.jpeg') }}" alt="Simba Logo" class="img-fluid mb-3" style="margin-top: 120px;" >
         <form id="license-form">
             <input type="text" class="form-control mb-2" id="username"  name="username"  placeholder="Enter Username">
             <input type="password" class="form-control mb-2" id="password" placeholder="Enter Password">
