--- a/simbatolls/templates/search_results.html
+++ b/simbatolls/templates/search_results.html
@@ -159,7 +159,7 @@
 <body>
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
         <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='assets/logo/simba.jpeg') }}" alt="Simba Logo">
+            <img src="{{ url_for('static', filename='assets/logo/simba.png') }}" alt="Simba Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -175,7 +175,7 @@
 
 
     <div class="container mt-5 text-center">
-        <img src="{{ url_for('static', filename='assets/images/brand/simba.png') }}" alt="Simba Logo" class="img-fluid mb-3" style="max-width: 200px; margin-top: 100px; margin-bottom: 100px">
+        <img src="{{ url_for('static', filename='assets/images/brand/simba.jpeg') }}" alt="Simba Logo" class="img-fluid mb-3" style="max-width: 200px; margin-top: 100px; margin-bottom: 100px">
         <div class="mt-3 text-center">
             <h4>Recent Contracts</h4>
             <div class="d-flex flex-wrap justify-content-center" style="gap: 10px; margin-top: 50px; margin-bottom: 50px">
