--- a/simbatolls/templates/search_results.html
+++ b/simbatolls/templates/search_results.html
@@ -227,12 +227,12 @@
                         {% for record in summary_record %}
                         <tr>
                             <td>{{ record['contract_number'] }}</td>
-                            <td>{{ row['pickup_date_time'] }}</td>
-                            <td>{{ row['dropoff_date_time'] }}</td>
-                            <td>{{ row['num_of_rows'] }}</td>
-                            <td>{{ row['admin_fee'] }}</td>
-                            <td>{{ row['sum_of_toll_cost'] }}</td>
-                            <td>{{ row['total_toll_contract_cost'] }}</td>
+                            <td>{{ record['pickup_date_time'] }}</td>
+                            <td>{{ record['dropoff_date_time'] }}</td>
+                            <td>{{ record['num_of_rows'] }}</td>
+                            <td>{{ record['admin_fee'] }}</td>
+                            <td>{{ record['sum_of_toll_cost'] }}</td>
+                            <td>{{ record['total_toll_contract_cost'] }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
