--- a/simbatolls/templates/summary.html
+++ b/simbatolls/templates/summary.html
@@ -209,9 +209,9 @@
                             <td>{{ row['pickup_date_time'] }}</td>
                             <td>{{ row['dropoff_date_time'] }}</td>
                             <td>{{ row['num_of_rows'] }}</td>
-                            <td>{{ row['admin_fee'] }}</td>
-                            <td>{{ row['sum_of_toll_cost'] }}</td>
-                            <td>{{ row['total_toll_contract_cost'] }}</td>
+                            <td>${{ row['admin_fee'] }}</td>
+                            <td>${{ row['sum_of_toll_cost'] }}</td>
+                            <td>${{ row['total_toll_contract_cost'] }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
