--- a/simbatolls/templates/home.html
+++ b/simbatolls/templates/home.html
@@ -86,6 +86,24 @@
             color: #ccccff !important; /* Even lighter shade for active link */
         }
     </style>
+    <script>
+        function checkJobStatus(jobId) {
+            fetch(`/job-status/${jobId}`)
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === 'finished') {
+                    window.location.href = '/summary';  // Redirect to summary page
+                } else {
+                    setTimeout(() => checkJobStatus(jobId), 2000);  // Check again after 2 seconds
+                }
+            })
+            .catch(error => console.error('Error checking job status:', error));
+        }
+        
+        // Call this function with the job ID received from the server after starting the job
+        checkJobStatus(jobId);
+        </script>
+        
 </head>
 <body>
 
