--- a/simbatolls/templates/home.html
+++ b/simbatolls/templates/home.html
@@ -262,7 +262,7 @@
                             increaseProgressGradually(response.job_id);  // Start the gradual increase
                         },
                         error: function() {
-                            alert('Error starting the job.');
+                            alert('Error: starting the job. Wait for progress bar to finish before going to any other page. Check few contract numbers from the new file to ensure it was uploaded.');
                         }
                     });
                 }
