--- a/simbatolls/templates/home.html
+++ b/simbatolls/templates/home.html
@@ -122,6 +122,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/summary">Summary</a>
+            <a class="nav-item nav-link" href="/dashboard">Dashboard</a>
             <a class="nav-item nav-link" href="/search">Search Results</a>
         </div>
     </div>
