--- a/simbatolls/templates/dashboard.html
+++ b/simbatolls/templates/dashboard.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarCharter Toll-a-Tor</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body, html {
@@ -96,27 +96,23 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-        <a class="navbar-brand" href="#">Simba Dashboard</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" href="/">
+            <img src="{{ url_for('static', filename='assets/logo/simba.png') }}" alt="Simba Toll-a-Tor">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-            </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="/">Upload Files</a>
+                <a class="nav-item nav-link" href="/summary">Summary</a>
+                <a class="nav-item nav-link" href="/search">Search Results</a>
+            </div>
         </div>
     </nav>
-    <div class="text-center">
-        <img src="{{ url_for('static', filename='assets/images/brand/simba.jpeg') }}" alt="Simba Logo" class="img-fluid mb-3" style="margin-top: 120px;" >
-    </div>
+
     <div class="container dashboard-container">
-        <h2>Interactive Dashboard</h2>
         <div class="row">
             <div class="col-12">
                 <label for="start_date">Start Date:</label>
@@ -130,29 +126,24 @@
     </div>
 
     <script>
-        function updateCharts() {
-            const startDate = document.getElementById('start_date').value;
-            const endDate = document.getElementById('end_date').value;
-    
-            console.log(`Fetching data from: /dashboard?start_date=${startDate}&end_date=${endDate}`); // Debug: Log the URL
-    
-            fetch(`/dashboard?start_date=${startDate}&end_date=${endDate}`)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                console.log('Data received:', data); // Debug: Log received data
-                Plotly.newPlot('tollsChart', data);
-            })
-            .catch(error => console.error('Error fetching data:', error));
-        }
-    
-        document.addEventListener('DOMContentLoaded', function() {
-            updateCharts();  // Initial fetch and render
-        });
+        <script>
+            function updateCharts() {
+                const startDate = document.getElementById('start_date').value;
+                const endDate = document.getElementById('end_date').value;
+        
+                fetch(`/dashboard/data?start_date=${startDate}&end_date=${endDate}`)
+                .then(response => response.json())
+                .then(data => {
+                    Plotly.newPlot('tollsChart', data);
+                })
+                .catch(error => console.error('Error fetching data:', error));
+            }
+        
+            document.addEventListener('DOMContentLoaded', function() {
+                updateCharts();  // Initial fetch and render
+            });
+        </script>
+        
     </script>
     
 
